--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   "homepage": "https://github.com/sabihak89/radium#readme",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
     "mongoose": "^6.1.2",
-    "aws-sdk": "^2.1047.0",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.21"
   }
 }
